--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    testImplementation 'org.amshove.kluent:kluent:1.61'
+    testImplementation "org.amshove.kluent:kluent:1.61"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.6.0"
 }
 
 compileKotlin {
