--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "com.marcinmoskala:DiscreteMathToolkit:1.0.3"
 
     testImplementation "org.amshove.kluent:kluent:1.61"
     testImplementation "org.junit.jupiter:junit-jupiter:5.6.0"
